[project]
name = "xhs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.10.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "openai>=1.95.1",
    "pycookiecloud>=1.0.4",
    "pyexecjs>=1.5.1",
    "requests>=2.32.3",
]
